# POO

RoboticArm/: RoboticArm.gd  RoboticArm.tscn  export_presets.cfg
UML/: README.md  UML_E1.puml  UML_E2.puml  UML_E3.puml  UML_E4.puml  UML_E5.puml  make.sh
UML/code/cpp/: bebida.cpp  bebida.hpp  cospel.cpp  cospel.hpp  expendedora.cpp  expendedora.hpp  lata.cpp  lata.hpp  orden.hpp
UML/code/python/: bebida.py  cospel.py  expendedora.py  lata.py  orden.py
robot_movil/include/: Prompt.hpp  Trayectoria.hpp
robot_movil/src/: Prompt.cpp
tp2_e1/: Makefile  meson.build
tp2_e1/.scripts/: run.sh  test.sh
tp2_e1/include/: Prompt.hpp
tp2_e1/src/: Trayectoria.cpp  main  main.cpp
tp2_e1/tests/: test-Prompt.cpp
tp2_e2/: .getsrc.sh  input  input2  main.cpp  map  meson.build  report
tp2_e2/.scripts/: run.sh
tp2_e2/include/: Circle.hpp  FileParser.hpp  Generador.hpp  Rectangle.hpp  geometricEntity.hpp
tp2_e2/src/: Circle.cpp  FileParser.cpp  Generador.cpp  Rectangle.cpp  Triangle.cpp  main.cpp
tp2_e2/tests/: test-Circle.cpp  test-Generador.cpp  test-Rectangle.cpp  test-Triangle.cpp  test-geometricEntity.cpp
tp2_e3/: .getsrc.sh  client.cpp  input  meson.build  server.cpp
tp2_e3/.scripts/: run.sh  test.sh
tp2_e3/include/: Calculator.hpp  Div.hpp  History.hpp  Mul.hpp  NRoot.hpp  Operation.hpp  Pow.hpp  Res.hpp  Sum.hpp  Triangle.hpp  geometricEntityMock.hpp
tp2_e3/lib/: XmlRpc.h  XmlRpcClient.cpp  XmlRpcServerConnection.cpp  XmlRpcSocket.cpp
tp2_e3/src/: Calculator.cpp  Circle.cpp  Generador.cpp  Operation.cpp  Rectangle.cpp
